--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-native-image-colors": "^1.5.1",
     "react-native-safe-area-context": "^4.3.1",
     "react-native-screens": "^3.13.1",
+    "react-native-splash-screen": "^3.3.0",
     "react-native-vector-icons": "^9.1.0"
   },
   "devDependencies": {
